--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,4 +3,8 @@ services:
   mywebsite:
     image: myapp:latest
     ports:
-    - "3000:8080"
+      - "3000:8080"
+otherwebsite:
+  image: otherapp:latest
+  ports:
+    - "3001:8080"
