--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,12 @@ services:
     image: myapp:latest
     ports:
       - "3000:8080"
+    deploy:
+      replicas: 3
+
 otherwebsite:
   image: otherapp:latest
   ports:
     - "3001:8080"
+  deploy:
+    replicas: 2
