--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       replicas: 3
 
 otherwebsite:
-  image: otherapp:latest
+  image: myapp:latest
   ports:
     - "3001:8080"
   deploy:
